--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,11 @@
-camera sama nic dealt nebude
-bude objekt player a ten bude mit script, ktery se bude pohybovat
-camera bude mit transformaci jako parenta
-camear asi ani nebude deedit z objektu
-vytvorit CameraObject - bude rozsirovat interface objektu
-bude specialne ulozenej ve scene
-bude mozne se na nej dostat ze skriptu a z neho ho nastavovat
+pokud zadnej objekt nevytvori kameru, tak se nic nevyrenderuje
+kamera pouziva transformaci toho objektu jehoz je komponentou
+bude objekt player a ten bude mit script, ktery se bude pohybovat podle klaves a tim hybat camerou
 script bude pracovat s camerouObjektem, ktery bude mit spceialni interface
-nema object drzet vsechno v jednom vektoru a pristupovat na to podle typu?
+
 nemusim to predavat v parameterech, stati statciky getery?
 
 objekty budou mit parenty a childreny a to bude mit vliv na transformaci
+objekty se budou mazat az pri praci, ne zvlast v clean metode, aby se to neprochazelo dvakrat
+
+objekty vyhledavat podle mena, ne typu, misto typu se da udelat singleton objekt
