get rid of weak_ptr and use unique_ptr instead of shared_ptr

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
-objekty budou mit parenty a childreny a to bude mit vliv na transformaci
-mazat i decka
+objekty mohou mit parenty a childreny a to bude mit vliv na transformaci
+pri destroy se museji smazat i deti rodice
 
 load assimp
 
