--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,27 @@
 load assimp
+mel bych mit metodu loadScene, ktery mi loadne cely file a potom helper metody, kde si z nej budu getovat meshe, materialy a tak
+uz treba ve sceneDefinici
+ty helper meotdy pak si ulozej ten odkaz pres weak_ptr
+volam loadMesh
+nacte scene a drzi si ji
+loadMaterial pouzije drzenou scenu
+...
+udelam si weak_ptr na kazdy shared_ptr ktery vracim
+pri nejakym dalsim loadu stejne sceny se podivam jestli uz ten mesh drzim kdzytak nactu celou scenu znova jinak jenom vratim
+FreeScene() - assimp to drzi za me
+assim.GetScene()
+Assimp::Importer::GetOrphanedScene()	
+budou i overload metody, kde zadam nazev filu treba na load mesh a tyhle jediny si budou ukladat weak_ptr, tam ve filu bude jenom jeden model
+boudoy ty vis popsany, LoadScene, ktery si je ukladat nebou, to budou filky, kde je vic veci
+automaticky si budu pamatovat posledni load a nebudu muset znova loadovat pro getovani materialu (poprve, podruhe uz budu mi nacashovane)
+
+tohle by mi melo stacit na vsechno
+jenom load pro scenu co si nepamatauje a ja si ho iteruju
+a samostatny load pro prefaby co si pamatuje
+
+
+
+
 https://docs.unity3d.com/Manual/SL-SubShaderTags.html
 
 pri volani render mi renderer nebude nic renderovat, ale nasype commandy do render queue,
