--- a/TODO.txt
+++ b/TODO.txt
@@ -1,31 +1,22 @@
-mel bych mit metodu loadScene, ktery mi loadne cely file a potom helper metody, kde si z nej budu getovat meshe, materialy a tak
-load mesh a material pouzije drzenou scenu
-collada ma nadefinovane objekty a pak ma pro ne nadefinovane transformace, takze muzu vracet objekty a jejich transoformace
-a v scene definici si z tooh potom vytvaret objekty
-zatim jenom nacrtnout definice metod ale neni potreba implementovat
-udelam si weak_ptr pouze na kazdy shared_ptr ktery vracim z metod ktery ocekavaj jednotlive meshe a materialy
-pri nejakym dalsim loadu stejne sceny se podivam jestli uz ten mesh drzim kdzytak nactu celou scenu znova jinak jenom vratim
-budou i overload metody, kde zadam nazev filu treba na load mesh a tam ve filu bude jenom jeden model
-asi moznost zeptat se meshe kolik ma submeshu
-void LoadMaterialsData();
-void LoadMaterialData();
-nebo jsou jenom paths a ty si musim nacist sam
-reserve na vektorech
-textura bude bud obrazek, nebo bude nejaka barva, ta barva bude taky udelana jako textura s jednim pixelem?
-
-ma to teda dve vyuziti:
-load cele scene - jeji init v sceneLoaderu
-load jednotlivych modelu
-
-FreeScene() - assimp to drzi za me
-assim.GetScene()
-Assimp::Importer::GetOrphanedScene()	
-
-tohle by mi melo stacit na vsechno
-
 pouzivat public memberu misto getteru/setteru?
 proc mit static time? rozhodnout se konecne ohledne tech static a getteru
 mozna udelat staticky gettery a ty se muzou pouzivat odkudkoliv, tam kde se to pouziva casto si to z toho natahnu nekde v konstruktoru
+
+komponenta nemusi mit object, co kdyz si ji drzum v membru ve skriptu?
+object se ji priradi az pri predani do objektu, tam se taky zaregistuje do Components, mezitim je 'neaktivni'
+
+https://docs.unity3d.com/Manual/SL-SubShaderTags.html
+
+pri volani render mi renderer nebude nic renderovat, ale nasype commandy do render queue,
+tam se budou radit prioritne podle vrstvy materialu, potom podle programu
+jeden submesh bude asi jeden draw call, ten se zaradi do te fronty pres pointer na MeshRenderer
+aby mel vsechno potrebne info, nastavi kontext a vykresli se, jde dalsi
+
+atributy jde sdilet mezi programy pokud maji stejnou lokaci,
+atributy ne, ale muze se pouzit unifom buffer objekt ktery zastresi vsechny naraz
+
+mesh bude drzet vao, aby ho kdyztak mohl modifikovat pri updatu vertices? glMapBuffer
+shader bude drzet lokace?
 
 All Awake calls
 All Start Calls
@@ -44,25 +35,13 @@ skripty by si asi fakt meli ty metody registrovat, kdyz jich je takhle hodne
 fixedUpate je pouze pro fyziku, napr physcs addFOrce
 pohyb jako transform.translate se dela v update
 
-https://docs.unity3d.com/Manual/SL-SubShaderTags.html
-
-pri volani render mi renderer nebude nic renderovat, ale nasype commandy do render queue,
-tam se budou radit prioritne podle vrstvy materialu, potom podle programu
-jeden submesh bude asi jeden draw call, ten se zaradi do te fronty pres pointer na MeshRenderer
-aby mel vsechno potrebne info, nastavi kontext a vykresli se, jde dalsi
-
-atributy jde sdilet mezi programy pokud maji stejnou lokaci,
-atributy ne, ale muze se pouzit unifom buffer objekt ktery zastresi vsechny naraz
-
-mesh bude drzet vao, aby ho kdyztak mohl modifikovat pri updatu vertices? glMapBuffer
-shader bude drzet lokace?
-
 !!!!!!!
 https://unity3d.com/learn/tutorials/temas/performance-optimization/optimizing-graphics-rendering-unity-games
-
-komponenta nemusi mit object, co kdyz si ji drzum v membru ve skriptu?
 
 https://hero.handmade.network/forums/code-discussion/t/2479-using_opengl_uniforms_attributes_outputs_in_more_efficient_way
 https://gamedev.stackexchange.com/questions/57108/what-is-the-best-method-to-update-shader-uniforms
 https://blender.stackexchange.com/questions/32677/how-to-combine-two-different-textures-into-one
 https://github.com/assimp/assimp/wiki/Embedded-Textures-References
+
+kdybych chtel ukladat data submeshu do jednoho vektoru, samostatne mi staci jenom indices
+https://computergraphics.stackexchange.com/questions/4623/multiple-vao-share-a-vbo
