--- a/TODO.txt
+++ b/TODO.txt
@@ -9,7 +9,9 @@ pro kazdou kameru se ze vsech objektu, ktere uz maji nove transformacni matice, 
 tam se budou radit prioritne podle vrstvy materialu, potom podle programu
 jeden submesh bude jeden draw call, ten se zaradi do fronty pres pointer na MeshRenderer a index
 ten nastavi kontext a vykresli se, jde dalsi
-shader asi nemusi byt pres enum, kazdy shader muze dedit z baze, do nej se da v konstrukoru path na shdare file
+shader se muze nastavovat pres enum a nekde ve factory tomu bude prirazenej shader class a fily shaderu
+kazdej bude mit jenom jednu instanci, ktera se vytvori on demand
+shader asi nemusi byt pres enum, kazdy shader muze dedit z baze, do nej se da v konstrukoru path na shader file
 takze ten shader class bude jakjo by predpis pro skupinu shaderu nejakeho typu
 ty vsechny shadery budou mit stejne usporadani atributu, takze ja muzu se vsema shaderama pracovat stejne
 shader classa bude mit nejakou setup metodu, ktera bude neco delat na zaklade vybraneho typu shaderu
