fix gitignore and create shaders class

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,3 @@
-nemam v gitu dllky?
-
 https://docs.unity3d.com/Manual/SL-SubShaderTags.html
 
 prvne se musi zpropagovat transformace
@@ -12,7 +10,7 @@ ten nastavi kontext a vykresli se, jde dalsi
 shader se muze nastavovat pres enum a nekde ve factory tomu bude prirazenej shader class a fily shaderu
 kazdej bude mit jenom jednu instanci, ktera se vytvori on demand
 shader asi nemusi byt pres enum, kazdy shader muze dedit z baze, do nej se da v konstrukoru path na shader file
-takze ten shader class bude jakjo by predpis pro skupinu shaderu nejakeho typu
+takze ten shader class bude jakjo by predpis pro skupinu shaderu nejakeho typu -  a nemel y se teda jmenovat napr technique?
 ty vsechny shadery budou mit stejne usporadani atributu, takze ja muzu se vsema shaderama pracovat stejne
 shader classa bude mit nejakou setup metodu, ktera bude neco delat na zaklade vybraneho typu shaderu
 shader se bude volat pres material
