--- a/TODO.txt
+++ b/TODO.txt
@@ -12,6 +12,7 @@ ten load sceny by mel rovnou vytvaret objekty anastavovat jim komponenty a nemel
 zkusit optinmalozavat assimp flagy
 umet nacist barvy misto textur
 rozlisit shinnines a specular
+mely by byt v jedne texture, shinines jako alpha 0 v unity je to smoothness
 stahnout si nejakej poradnej modela podivat se jak ma rozlozeny textury
 https://gamedev.stackexchange.com/questions/74879/specular-map-what-about-the-specular-reflections-highlight-size
 mit ambient color v te strukture pro material?
@@ -21,6 +22,16 @@ svetlo je jenom jedna barva
 potom je globalni ambient color
 ty spekular barvy a tak jsou vlasnosti jenom materialu a ne svetla
 http://assimp.sourceforge.net/lib_html/material_8h.html
+az udelam pohyb kamery tak normal mapping
+tangenty a bitangenty vygeneruju assimpem
+https://learnopengl.com/Advanced-Lighting/Normal-Mapping
+https://paroj.github.io/gltut/Illumination/Tut11%20BlinnPhong%20Model.html
+mel bych nekdy i u normalniho loadu volat unload scene
+modely muzou sdilet textury mezi materialy... :/
+kombinovani textur a barev example dole: http://assimp.sourceforge.net/lib_html/materials.html
+kombinovani nedelat, pripadne na cpu jenom a kdyz uz tak jenom jedna textura s jednou barvou na gpu
+
+!!!inspirovat se https://docs.unity3d.com/Manual/StandardShaderMaterialParameters.html
 
 https://docs.unity3d.com/Manual/SL-SubShaderTags.html
 
