--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,7 @@ library_visual_scenes obsahuje transformace - v assimpu m_rootNode
 ten jaguar pokud ma vic geometrii se musi naloadovat pres loadscene
 jak poznam ze to ma vic geometrii a ze by to meli byt separatni objekty?
 checknout co se tam dlouho loaduje pri jaguaru
-pro klasicky load jednoho meshe uvazuju, ze je tam jeden mesh a nema zadnou t
+pro klasicky load jednoho meshe uvazuju, ze je tam jeden mesh a nema zadnou
 transform, zbytek necham na assimpu
 pro loadsceny, prochazim strom sceny a vytvarim pro kazdy node separatni mesh
 ten load sceny by mel rovnou vytvaret objekty anastavovat jim komponenty a nemel by asi nic vracet
@@ -35,9 +35,7 @@ kombinovani nedelat, pripadne na cpu jenom a kdyz uz tak jenom jedna textura s j
 
 https://docs.unity3d.com/Manual/SL-SubShaderTags.html
 
-prvne se musi zpropagovat transformace
-bude root transformace drzena nekde v components, ale pro ucely GetParent se bude tvarit jako nullptr
-to bude defautni parent, pri SetParent se objekt odstrani z children sveho aktualniho parenta
+mit moznost nastavovat transformace i v globalnim prostoru
 pro kazdou kameru se ze vsech objektu, ktere uz maji nove transformacni matice, vytvori render queue
 tam se budou radit prioritne podle vrstvy materialu, potom podle programu
 http://developer.download.nvidia.com/CgTutorial/cg_tutorial_chapter04.html
