--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
-setMeshAndMaterials
-bitangent asi nepotrebuju predavat do shaderu
-udelat si plany jak v tutorialu a s test a cihlama a s tema si rotovat
-potom to vyzkouset na ostatnich modelech z tutorialu
-dat svetlu transform a aobrazit na jeho miste zlutou kouli
+alpha v texture na nanostui je nejaka navic
+jiny deafult na specular nez 0
+rozchodit nanosuit z tutorialu
+co je ta refl?
+zobrazit na miste svetla zlutou kouli
 library_visual_scenes obsahuje transformace - v assimpu m_rootNode
 ten jaguar pokud ma vic geometrii se musi naloadovat pres loadscene
 jak poznam ze to ma vic geometrii a ze by to meli byt separatni objekty?
@@ -10,13 +10,11 @@ pro klasicky load jednoho meshe uvazuju, ze je tam jeden mesh a nema zadnou
 transform, zbytek necham na assimpu
 pro loadsceny, prochazim strom sceny a vytvarim pro kazdy node separatni mesh
 ten load sceny by mel rovnou vytvaret objekty anastavovat jim komponenty a nemel by asi nic vracet
-umet nacist barvy misto textur
 rozlisit shinnines a specular
 mely by byt v jedne texture, shinines jako alpha 0 v unity je to smoothness
 stahnout si nejakej poradnej modela podivat se jak ma rozlozeny textury
 https://gamedev.stackexchange.com/questions/74879/specular-map-what-about-the-specular-reflections-highlight-size
 co delat s emission color?
-svetlo je jenom jedna barva
 potom je globalni ambient light - nebo muze byt brana ze skyboxu
 pripadne pouzit https://www.khronos.org/registry/OpenGL-Refpages/gl4/html/glBufferSubData.xhtml
 https://docs.unity3d.com/Manual/GlobalIllumination.html
@@ -24,7 +22,6 @@ mit ambient color v te strukture pro material?
 https://unity3d.com/learn/tutorials/topics/graphics/ambient-lighting
 ty spekular barvy a tak jsou vlasnosti jenom materialu a ne svetla
 http://assimp.sourceforge.net/lib_html/material_8h.html
-https://learnopengl.com/Advanced-Lighting/Normal-Mapping
 mel bych nekdy i u normalniho loadu volat unload scene
 modely muzou sdilet textury mezi materialy... :/
 kombinovani textur a barev example dole: http://assimp.sourceforge.net/lib_html/materials.html
